# CppHttpNetWork

./: CMakeLists.txt  README.md
Get/: CMakeLists.txt
POST/: CMakeLists.txt  Post_Download1.cpp  Post_Download2.cpp  Post_Download3.cpp  Post_Download4.cpp  Post_Upload1.cpp  Post_getinmemory.cpp
Send/: CMakeLists.txt  Send.cpp
